<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProcessAbholungSchnittholzActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:padding="6dp">

        <TextView
            android:id="@+id/tvHeadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/process_schnittholz_short"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tVTopText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/schnittholz_textview_topText" />

        <TextView
            android:id="@+id/tvTournumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/etTournumber"
            android:text="@string/schnittholz_tournummer"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/etTournumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:importantForAutofill="no"
                android:layout_weight="2"/>
            <Button
                android:id="@+id/btnScanCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_baseline_photo_camera_24"
                android:layout_weight="1"/>

        </LinearLayout>


        <TextView
            android:id="@+id/tvCar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/etCar"
            android:text="@string/login_textviewer_kennzeichen"/>

        <EditText
            android:id="@+id/etCar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:layout_marginBottom="8dp"
            android:inputType="textCapCharacters" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button_weiter"
            android:background="@color/colorAccent" />


    </LinearLayout>

</ScrollView>